<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.youssgm3o8</groupId>
  <artifactId>AdminAreaProtectionPlugin</artifactId>
  <version>1.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  
  <name>AdminAreaProtectionPlugin</name>
  <description>MCPE Nukkit plugin for admin area protection with SQLite persistence and GUI support.</description>

  <properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.source>21</maven.compiler.source>
      <maven.compiler.target>21</maven.compiler.target>
  </properties>

  <repositories>
      <repository>
          <id>opencollab-repository-maven-releases</id>
          <name>Opencollab Repository</name>
          <url>https://repo.opencollab.dev/maven-releases</url>
      </repository>
      <repository>
          <id>jitpack.io</id>
          <url>https://jitpack.io</url>
      </repository>
  </repositories>

  <dependencies>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>5.8.0</version>
            <scope>test</scope>
        </dependency>
        <!-- Nukkit -->
        <dependency>
            <groupId>cn.nukkit</groupId>
            <artifactId>nukkit</artifactId>
            <version>1.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- LuckPerms -->
        <dependency>
            <groupId>net.luckperms</groupId>
            <artifactId>api</artifactId>
            <version>5.4</version>
            <scope>provided</scope>
        </dependency>

        <!-- Database -->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.43.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>

        <!-- Caching -->
        <dependency>
            <groupId>com.github.ben-manes.caffeine</groupId>
            <artifactId>caffeine</artifactId>
            <version>3.1.8</version>
        </dependency>

        <!-- Metrics -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-core</artifactId>
            <version>1.11.3</version>
        </dependency>

        <!-- JSON -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20231013</version>
        </dependency>

        <!-- Testing -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>1.37</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>1.37</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>5.2.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.10.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.2.224</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.15.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>1.18.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>testcontainers</artifactId>
            <version>1.18.3</version>
            <scope>test</scope>
        </dependency>

        <!-- Add SLF4J Implementation -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.9</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.36</version>
        </dependency>
        <!-- Remove Flyway dependency -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
        </dependency>
  </dependencies>

  <build>
      <resources>
          <resource>
              <directory>src/main/resources</directory>
              <filtering>false</filtering>
              <includes>
                  <include>**/*</include>
              </includes>
              <excludes>
                  <exclude>**/*.java</exclude>
              </excludes>
              <targetPath>.</targetPath>
          </resource>
      </resources>
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>3.11.0</version>
              <configuration>
                  <source>${maven.compiler.source}</source>
                  <target>${maven.compiler.target}</target>
                  <testSource>${maven.compiler.source}</testSource>
                  <testTarget>${maven.compiler.target}</testTarget>
                  <encoding>UTF-8</encoding>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-resources-plugin</artifactId>
              <version>3.3.1</version>
              <configuration>
                  <encoding>UTF-8</encoding>
                  <propertiesEncoding>UTF-8</propertiesEncoding>
                  <nonFilteredFileExtensions>
                      <nonFilteredFileExtension>yml</nonFilteredFileExtension>
                  </nonFilteredFileExtensions>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.2.2</version>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-shade-plugin</artifactId>
              <version>3.5.1</version>
              <executions>
                  <execution>
                      <phase>package</phase>
                      <goals>
                          <goal>shade</goal>
                      </goals>
                      <configuration>
                          <minimizeJar>false</minimizeJar>
                          <relocations>
                              <relocation>
                                  <pattern>com.github.benmanes.caffeine</pattern>
                                  <shadedPattern>adminarea.shaded.caffeine</shadedPattern>
                              </relocation>
                              <relocation>
                                  <pattern>io.micrometer</pattern>
                                  <shadedPattern>adminarea.shaded.micrometer</shadedPattern>
                              </relocation>
                          </relocations>
                          <filters>
                              <filter>
                                  <excludeDefaults>false</excludeDefaults>
                                  <artifact>*:*</artifact>
                                  <includes>
                                      <include>org/glassfish/json/JsonProviderImpl</include>
                                      <include>com/sun/xml/bind/v2/model/nav/ReflectionNavigator</include>
                                      <include>org/sqlite/**</include>
                                      <include>lang/**/*.yml</include>
                                      <include>*.yml</include>
                                  </includes>
                                  <excludes>
                                      <exclude>META-INF/*.SF</exclude>
                                      <exclude>META-INF/*.DSA</exclude>
                                      <exclude>META-INF/*.RSA</exclude>
                                      <exclude>META-INF/*.MF</exclude>
                                      <exclude>META-INF/LICENSE</exclude>
                                      <exclude>META-INF/LICENSE.txt</exclude>
                                      <exclude>META-INF/NOTICE</exclude>
                                      <exclude>META-INF/NOTICE.txt</exclude>
                                      <exclude>META-INF/versions/**</exclude>
                                      <exclude>META-INF/*.kotlin_module</exclude>
                                      <exclude>**/*.md</exclude>
                                      <exclude>**/*.markdown</exclude>
                                      <exclude>**/*.header</exclude>
                                      <exclude>**/*.xml</exclude>
                                      <exclude>**/pom.properties</exclude>
                                      <exclude>**/io.netty.versions.properties</exclude>
                                      <exclude>**/*.args</exclude>
                                      <exclude>**/*.so</exclude>
                                      <exclude>module-info.class</exclude>
                                  </excludes>
                              </filter>
                          </filters>
                          <transformers>
                              <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                              <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer" />
                              <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
                                  <addHeader>false</addHeader>
                              </transformer>
                          </transformers>
                          <createDependencyReducedPom>false</createDependencyReducedPom>
                      </configuration>
                  </execution>
              </executions>
          </plugin>
      </plugins>
  </build>
</project>
